force-app/main/default/objects/Account/fields/Accredited_Capital_Provider__c.field-meta.xml
<CustomField>
    <fullName>Accredited_Capital_Provider__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accredited Capital Provider</label>
    <type>Checkbox</type>
</CustomField>