force-app/main/default/objects/Account/fields/ACE_Campaign__c.field-meta.xml
<CustomField>
    <fullName>ACE_Campaign__c</fullName>
    <description>used to filter contacts in lists view and reports for ACE group</description>
    <label>ACE Campaign</label>
    <length>100</length>
    <type>Text</type>
</CustomField>