force-app/main/default/objects/Account/fields/ACE_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>ACE_Review_Date__c</fullName>
    <label>ACE Review Date</label>
    <type>Date</type>
</CustomField>