force-app/main/default/objects/Account/fields/Banker_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Banker_Review_Date__c</fullName>
    <label>Banker Review Date</label>
    <type>Date</type>
</CustomField>