force-app/main/default/objects/Account/fields/Billing_County__c.field-meta.xml
<CustomField>
    <fullName>Billing_County__c</fullName>
    <label>Billing County</label>
    <length>40</length>
    <type>Text</type>
</CustomField>