force-app/main/default/objects/Account/fields/Billing_Province__c.field-meta.xml
<CustomField>
    <fullName>Billing_Province__c</fullName>
    <label>Billing Province</label>
    <length>64</length>
    <type>Text</type>
</CustomField>