force-app/main/default/objects/Account/fields/BillingCountry_Old__c.field-meta.xml
<CustomField>
    <fullName>BillingCountry_Old__c</fullName>
    <description>BillingCountry before picklist turned on</description>
    <label>BillingCountry_Old</label>
    <length>40</length>
    <type>Text</type>
</CustomField>