force-app/main/default/objects/Account/fields/BillingState_Old__c.field-meta.xml
<CustomField>
    <fullName>BillingState_Old__c</fullName>
    <description>Backup of data before Picklist turned on</description>
    <label>BillingState_Old</label>
    <length>40</length>
    <type>Text</type>
</CustomField>