force-app/main/default/objects/Account/fields/Bite_Max__c.field-meta.xml
<CustomField>
    <fullName>Bite_Max__c</fullName>
    <label>Bite Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>