force-app/main/default/objects/Account/fields/Bite_Min__c.field-meta.xml
<CustomField>
    <fullName>Bite_Min__c</fullName>
    <label>Bite Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>