force-app/main/default/objects/Account/fields/Buyer_Type__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Type__c</fullName>
    <formula>IF( RecordType.Name = &apos;Capital Provider&apos;, &apos;Financial&apos;,

IF( RecordType.Name = &apos;Operating Company&apos;, &apos;Strategic&apos;, &apos;&apos;))</formula>
    <label>Buyer Type</label>
    <type>Text</type>
</CustomField>