force-app/main/default/objects/Account/fields/Buyout_Lower_Mid_Market__c.field-meta.xml
<CustomField>
    <fullName>Buyout_Lower_Mid_Market__c</fullName>
    <label>Buyout - Lower Mid-Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Considering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>