force-app/main/default/objects/Account/fields/CapIQ_Company__c.field-meta.xml
<CustomField>
    <fullName>CapIQ_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CapIQ Company</label>
    <referenceTo>CapIQ_Company__c</referenceTo>
    <relationshipLabel>Related Companies</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>