force-app/main/default/objects/Account/fields/CapIQ_ID__c.field-meta.xml
<CustomField>
    <fullName>CapIQ_ID__c</fullName>
    <formula>CapIQ_Company__r.Company_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CapIQ ID</label>
    <type>Text</type>
</CustomField>