force-app/main/default/objects/Account/fields/Clean_Job_By_Pass__c.field-meta.xml
<CustomField>
    <fullName>Clean_Job_By_Pass__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mark true to set  Clean Status to &quot;Skipped&quot;</inlineHelpText>
    <label>Clean Job By Pass</label>
    <type>Checkbox</type>
</CustomField>