force-app/main/default/objects/Account/fields/Client_Number__c.field-meta.xml
<CustomField>
    <fullName>Client_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Client Number</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>