force-app/main/default/objects/Account/fields/Co_invest_Bite_Max__c.field-meta.xml
<CustomField>
    <fullName>Co_invest_Bite_Max__c</fullName>
    <label>Co-invest Bite Max</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>