force-app/main/default/objects/Account/fields/Co_invest_Bite_Min__c.field-meta.xml
<CustomField>
    <fullName>Co_invest_Bite_Min__c</fullName>
    <label>Co-invest Bite Min</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>