force-app/main/default/objects/Account/fields/Co_Investment_Details__c.field-meta.xml
<CustomField>
    <fullName>Co_Investment_Details__c</fullName>
    <label>Co-Investment Details</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>