force-app/main/default/objects/Account/fields/Company_Import_Batch__c.field-meta.xml
<CustomField>
    <fullName>Company_Import_Batch__c</fullName>
    <description>When large batches of companies are imported (i.e. acquisitions), the batch name will be entered. Reports can be run on this value to see all companies imported from that batch. Delimited list</description>
    <inlineHelpText>Enter the source of imported company</inlineHelpText>
    <label>Company Import Batch</label>
    <type>TextArea</type>
</CustomField>