force-app/main/default/objects/Account/fields/Company_Name_URL__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_URL__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id, Name , &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Name URL</label>
    <type>Text</type>
</CustomField>