force-app/main/default/objects/Account/fields/Company_News__c.field-meta.xml
<CustomField>
    <fullName>Company_News__c</fullName>
    <description>News from DA Profile</description>
    <inlineHelpText>DA Profile</inlineHelpText>
    <label>Company News</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>