force-app/main/default/objects/Account/fields/Company_Source__c.field-meta.xml
<CustomField>
    <fullName>Company_Source__c</fullName>
    <description>Used to identify companies imported from an acquisition or archived</description>
    <inlineHelpText>HL - visible to all users
All others are visible to specific sets of users</inlineHelpText>
    <label>Company Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HL</fullName>
                <default>true</default>
                <label>HL</label>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
            <value>
                <fullName>Imported</fullName>
            </value>
            <value>
                <fullName>Archpoint</fullName>
            </value>
            <value>
                <fullName>Leonardo</fullName>
            </value>
            <value>
                <fullName>McQueen</fullName>
            </value>
            <value>
                <fullName>Mesa</fullName>
            </value>
            <value>
                <fullName>MVP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>