force-app/main/default/objects/Account/fields/Consultant__c.field-meta.xml
<CustomField>
    <fullName>Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consultant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Consultant</relationshipLabel>
    <relationshipName>Consultant</relationshipName>
    <type>Lookup</type>
</CustomField>