force-app/main/default/objects/Account/fields/CounterParty__c.field-meta.xml
<CustomField>
    <fullName>CounterParty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if the account is list as an opportunity counterparty, engagement counterparty or both.</description>
    <inlineHelpText>If checked then this account is listed as a counterparty.</inlineHelpText>
    <label>CounterParty</label>
    <type>Checkbox</type>
</CustomField>