force-app/main/default/objects/Account/fields/Coverage_Team_Aggregate__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Team_Aggregate__c</fullName>
    <label>Coverage Team Aggregate</label>
    <type>TextArea</type>
</CustomField>