force-app/main/default/objects/Account/fields/Credit_Direct_Lending__c.field-meta.xml
<CustomField>
    <fullName>Credit_Direct_Lending__c</fullName>
    <label>Credit - Direct Lending</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Considering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>