force-app/main/default/objects/Account/fields/Customers__c.field-meta.xml
<CustomField>
    <fullName>Customers__c</fullName>
    <description>Industries or companies that subscribe to company products. Used by Data and Analytics.</description>
    <label>Customers</label>
    <length>3500</length>
    <type>Html</type>
</CustomField>