force-app/main/default/objects/Account/fields/DaScoopComposer__Domain_1__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Domain_1__c</fullName>
    <inlineHelpText>indicates the primary email domain of the account. This is evaluated by Groove periodically</inlineHelpText>
    <label>Domain 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>