force-app/main/default/objects/Account/fields/DaScoopComposer__Engagement_Status__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Engagement_Status__c</fullName>
    <inlineHelpText>Indicates the status of CUSTOMER engagement such as email opens, phone conversations or meetings. The threshold between &quot;recent&quot; and &quot;past&quot; can be customized.</inlineHelpText>
    <label>Engagement Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Past Engagement</fullName>
            </value>
            <value>
                <fullName>Recent Engagement</fullName>
            </value>
            <value>
                <fullName>No Engagement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>