force-app/main/default/objects/Account/fields/Data_com_Description__c.field-meta.xml
<CustomField>
    <fullName>Data_com_Description__c</fullName>
    <inlineHelpText>Automatically updated with D&amp;B Info</inlineHelpText>
    <label>D&amp;B Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>