force-app/main/default/objects/Account/fields/Data_com_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Data_com_Ownership__c</fullName>
    <inlineHelpText>Automatically updated with D&amp;B Info</inlineHelpText>
    <label>D&amp;B Ownership</label>
    <length>32</length>
    <type>Text</type>
</CustomField>