force-app/main/default/objects/Account/fields/Data_Hygiene_Comments__c.field-meta.xml
<CustomField>
    <fullName>Data_Hygiene_Comments__c</fullName>
    <description>The purpose is for the Data Hygiene team to track research results in Salesforce.</description>
    <label>Data Hygiene Comments</label>
    <length>2525</length>
    <type>LongTextArea</type>
</CustomField>