force-app/main/default/objects/Account/fields/Deal_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Deal_Preferences__c</fullName>
    <label>Deal Preferences</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit - Corporate</fullName>
            </value>
            <value>
                <fullName>Credit - Mezzanine</fullName>
            </value>
            <value>
                <fullName>Credit - Real Estate</fullName>
            </value>
            <value>
                <fullName>Credit - Senior</fullName>
            </value>
            <value>
                <fullName>Credit - SME</fullName>
            </value>
            <value>
                <fullName>Credit - Structured</fullName>
            </value>
            <value>
                <fullName>Debt - Corporate</fullName>
            </value>
            <value>
                <fullName>Debt - Mezzanine</fullName>
            </value>
            <value>
                <fullName>Debt - Real Estate</fullName>
            </value>
            <value>
                <fullName>Debt - Senior</fullName>
            </value>
            <value>
                <fullName>Debt - Small / Medium Enterprises</fullName>
            </value>
            <value>
                <fullName>Debt - Structured Credit</fullName>
            </value>
            <value>
                <fullName>Equity - Coinvestment</fullName>
            </value>
            <value>
                <fullName>Equity - Direct</fullName>
            </value>
            <value>
                <fullName>Equity - Real Estate</fullName>
            </value>
            <value>
                <fullName>Private Equity Portfolios - Direct</fullName>
            </value>
            <value>
                <fullName>Private Equity Portfolios - Fund Recap</fullName>
            </value>
            <value>
                <fullName>Private Equity Portfolios - Syndicate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>