force-app/main/default/objects/Account/fields/Dun_and_Bradstreet_Company__c.field-meta.xml
<CustomField>
    <fullName>Dun_and_Bradstreet_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dun and Bradstreet Company</label>
    <referenceTo>Dun_and_Bradstreet_Company__c</referenceTo>
    <relationshipLabel>Related Salesforce Companies</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>