force-app/main/default/objects/Account/fields/DUNS_Address__c.field-meta.xml
<CustomField>
    <fullName>DUNS_Address__c</fullName>
    <formula>IF( 
NOT(ISBLANK(Dun_and_Bradstreet_Company__c)), 
Dun_and_Bradstreet_Company__r.Physical_Address__c + BR() +
Dun_and_Bradstreet_Company__r.City__c+&quot;, &quot;+Dun_and_Bradstreet_Company__r.State__c+&quot; &quot;+  Dun_and_Bradstreet_Company__r.Postal_Code__c , 
null)</formula>
    <label>DUNS Address</label>
    <type>Text</type>
</CustomField>