force-app/main/default/objects/Account/fields/DUNS_Information__c.field-meta.xml
<CustomField>
    <fullName>DUNS_Information__c</fullName>
    <formula>IF(
NOT(ISBLANK(Dun_and_Bradstreet_Company__c)),
&quot;Business Name: &quot; +Dun_and_Bradstreet_Company__r.Business_Name__c + BR() +
&quot;Trade Name: &quot; + Dun_and_Bradstreet_Company__r.Trade_Name_AKA__c + BR() +
&quot;Ownership: &quot; +  Dun_and_Bradstreet_Company__r.Ownership__c + BR() +
&quot;Parent DUNS: &quot; + Dun_and_Bradstreet_Company__r.Parent_DUNS__r.DUNS_Number_ExternalID__c + BR() +
&quot;HQ DUNS: &quot; + Dun_and_Bradstreet_Company__r.HQ_DUNS__r.DUNS_Number_ExternalID__c ,
null)</formula>
    <label>DUNS Information</label>
    <type>Text</type>
</CustomField>