force-app/main/default/objects/Account/fields/DUNS_Marketability__c.field-meta.xml
<CustomField>
    <fullName>DUNS_Marketability__c</fullName>
    <formula>Dun_and_Bradstreet_Company__r.Marketability__c</formula>
    <label>DUNS Marketability</label>
    <type>Text</type>
</CustomField>