force-app/main/default/objects/Account/fields/DUNS_Match_Confidence__c.field-meta.xml
<CustomField>
    <fullName>DUNS_Match_Confidence__c</fullName>
    <formula>TEXT(Dun_and_Bradstreet_Company__r.Match_Confidence__c)</formula>
    <label>DUNS Match Confidence</label>
    <type>Text</type>
</CustomField>