force-app/main/default/objects/Account/fields/DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>DUNS_Number__c</fullName>
    <description>DUNS Number</description>
    <inlineHelpText>DUNS Number</inlineHelpText>
    <label>DUNS Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>