force-app/main/default/objects/Account/fields/EBITDA_MM__c.field-meta.xml
<CustomField>
    <fullName>EBITDA_MM__c</fullName>
    <label>EBITDA (MM)</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>