force-app/main/default/objects/Account/fields/Engagement_Count__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Count__c</fullName>
    <description>Used in Opportunity Company formula field</description>
    <inlineHelpText>Used in Opportunity Company formula field</inlineHelpText>
    <label>Engagement Count</label>
    <summaryForeignKey>Engagement_Client_Subject__c.Client_Subject__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>