force-app/main/default/objects/Account/fields/Equity_Focus__c.field-meta.xml
<CustomField>
    <fullName>Equity_Focus__c</fullName>
    <label>Equity Focus</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Co-Investment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>