force-app/main/default/objects/Account/fields/Equity_Investment_Size__c.field-meta.xml
<CustomField>
    <fullName>Equity_Investment_Size__c</fullName>
    <label>Equity Investment Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-3m</fullName>
            </value>
            <value>
                <fullName>4-10m</fullName>
            </value>
            <value>
                <fullName>11-50m</fullName>
            </value>
            <value>
                <fullName>51-250m</fullName>
            </value>
            <value>
                <fullName>251m+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>