force-app/main/default/objects/Account/fields/ERP_Account_Description__c.field-meta.xml
<CustomField>
    <fullName>ERP_Account_Description__c</fullName>
    <formula>IF(RecordTypeId = &quot;012i0000000tEhF&quot;, &quot;External Customer&quot;,
IF(RecordTypeId = &quot;012i0000001NRzm&quot;, &quot;LDCCR&quot;,
IF(RecordTypeId = &quot;012i0000001N8pB&quot;, &quot;HL Account&quot;,
IF(RecordTypeId = &quot;0123F000000rhOU&quot;, &quot;Intercompany Customer&quot;,
IF(RecordTypeId = &quot;012i0000000tEhA&quot;, &quot;External Customer&quot;,
NULL)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Account Description</label>
    <type>Text</type>
</CustomField>