force-app/main/default/objects/Account/fields/ERP_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_Account_ID__c</fullName>
    <label>ERP Account ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>